--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
+  
+    "name": "puppeteer-tut",
+    "version": "0.1",
+    "main": "index.js",
   "scripts": {
-    "gcp-build": "node node_modules/puppeteer/install.js"
+   "gcp-build": "node node_modules/puppeteer/install.js"
   },
   "dependencies": {
     "@google-cloud/functions-framework": "^3.0.0",
